<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:weightSum="3" >

    <!-- 2 columns -->

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk1"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk2"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b3"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk3"
            android:textColor="#ffffff" />
    </TableRow>

    <!-- edittext span 2 column -->

    <TableRow
        android:id="@+id/a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/b4"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk3"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b5"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk4"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b6"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk5"
            android:textColor="#ffffff" />
    </TableRow>

    <!-- just draw a red line -->


    <!-- 3 columns -->

    <TableRow
        android:id="@+id/a8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dip" >

        <Button
            android:id="@+id/b7"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk3"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b8"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk4"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b9"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:background="@drawable/color"
            android:text="@string/chk5"
            android:textColor="#ffffff" />
    </TableRow>

</TableLayout>