<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/phone_compatibility"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/Supported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/Supported" />

    <LinearLayout
        android:id="@+id/forSupported"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/sendIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="#888"
            android:clickable="false"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/IP_details_label"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=" IP Address : Port "
            android:textColor="#000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <EditText
                android:id="@+id/IPaddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="text"
                android:text="Enter IP"
                android:textColor="#666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:text="Enter Port"
                android:textColor="#666" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forUnsupported"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#000"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/required_sensors"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/accelsupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/crossmark"
                android:textColor="#F00"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/accelerometer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/magsupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/crossmark"
                android:textColor="#F00"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/magnetometer" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>